Spring Docker demo project

--- a/springdemo/DockerFile
+++ b/springdemo/DockerFile
@@ -1,4 +1,3 @@
 FROM adoptopenjdk:8-jre-hotspot
-RUN mkdir /opt/app
 COPY springdockerdemo-1.0.jar /opt/app
-CMD ["java", "-jar", "/opt/app/springdockerdemo-1.0.jar"]
+CMD ["java", "-jar", "/opt/springdockerdemo-1.0.jar"]
