--- a/springdemo/DockerFile
+++ b/springdemo/DockerFile
@@ -1,3 +1,3 @@
 FROM adoptopenjdk:8-jre-hotspot
-COPY springdockerdemo-1.0.jar /opt/app
+COPY springdockerdemo-1.0.jar /opt/
 CMD ["java", "-jar", "/opt/springdockerdemo-1.0.jar"]
