--- a/springdemo/DockerFile
+++ b/springdemo/DockerFile
@@ -1,12 +1,12 @@
 #pull base image
 FROM adoptopenjdk:8-jre-hotspot
 
-ADD target/springdockerdemo-1.0.jar
+ADD target/springdockerdemo-1.0.jar springdockerdemo-1.0.jar
 
 #Maintainer 
 MAINTAINER kashyapRBharath
 
-#Expose port 8090
+#Expose port 8080
 EXPOSE 8098
 
 #default command
